(PC-3337): Change gauges sizes to grow based on resolution and fix overflow

--- a/src/styles/components/pages/profile/CreditGauge/_CreditGauge.scss
+++ b/src/styles/components/pages/profile/CreditGauge/_CreditGauge.scss
@@ -37,7 +37,7 @@
   box-shadow: 2px 2px 3px $grey-shadow-cg;
   height: rem(20px);
   margin-left: rem(-9px);
-  width: rem(56px);
+  width: 70%;
 }
 
 
