--- a/src/styles/components/pages/profile/_ProfileMainView.scss
+++ b/src/styles/components/pages/profile/_ProfileMainView.scss
@@ -7,7 +7,7 @@
   width: 100%;
 
   .pm-main {
-    overflow: scroll;
+    overflow: auto;
   }
 
   .pm-scroll {
